# aws-resource-id

./: .env  .pre-commit.sh  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: general.rs  general_resource.rs  lib.rs  region.rs
