[package]
description = "Copyable AWS resource IDs"
edition = "2021"
license = "MIT"
name = "aws-resource-id"
repository = "https://github.com/imbolc/aws-resource-id"
version = "0.2.0"

[features]
sqlx-postgres = ["sqlx"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
sqlx = { version = "0.8", features = ["postgres"], optional = true }
thiserror = "1"

[dev-dependencies]
serde_json = "1"
